--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ ul {
   text-transform: uppercase;
   color: #4d5ae5;
   margin-right: 76px;
-  
+
   color: #404bbf;
 }
 
@@ -83,8 +83,6 @@ ul {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-
- 
 }
 .header {
   border-bottom: 1px solid #e7e9fc;
@@ -93,7 +91,7 @@ ul {
   height: 72px;
 }
 
-.header-menu-link  {
+.header-menu-link {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -104,10 +102,10 @@ ul {
   display: block;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
-  color:#2e2f42;;
+  color: #2e2f42;
 }
 
-.header-menu-link-now  {
+.header-menu-link-now {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -127,7 +125,7 @@ ul {
   left: 0;
   bottom: -1px;
   border-radius: 2px;
-  
+
   height: 4px;
   background: #404bbf;
 }
@@ -404,7 +402,6 @@ height: 600px; */
   height: 40px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 32px;
-  
 }
 .social-icon {
   width: 100%;
@@ -416,12 +413,10 @@ height: 600px; */
   justify-content: center;
   fill: white;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 }
 
 .icon {
   fill: #f4f4fd;
-
 }
 .social-icon:hover {
   background-color: #404bbf;
@@ -455,26 +450,24 @@ height: 600px; */
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
-  box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover .overlay-cover-text {
   transform: translateY(0);
 }
-
- 
 
 .portfolio-shady-wrap {
   position: relative;
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
-  
- transition:  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover {
-  box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08) ;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
 
 .portfolio-image {
   padding: 32px 16px;
@@ -502,7 +495,7 @@ height: 600px; */
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  width:100%;
+  width: 100%;
   height: 100%;
   transform: translateY(100%);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -553,7 +546,6 @@ height: 600px; */
 .container-footer-box {
   display: flex;
   align-items: baseline;
-  
 }
 .promo {
   margin-right: 120px;
@@ -606,7 +598,7 @@ height: 600px; */
   fill: white;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-icon-hover  {
+.social-icon-hover {
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
@@ -616,12 +608,280 @@ height: 600px; */
   justify-content: center;
   fill: white;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 }
 .social-icon-hover:hover {
-  background-color:  #31d0aa;
+  background-color: #31d0aa;
 }
 
 .social-icon-hover:focus {
-  background-color:  #31d0aa;
+  background-color: #31d0aa;
+}
+
+.footer-subs-text {
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+
+  line-height: 1.5;
+
+  text-align: center;
+}
+
+.footer-subs-link {
+  margin-left: 80px;
+}
+.email {
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.footer-label {
+  display: flex;
+}
+.footer-input {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background: #2e2f42;
+  background-color: transparent;
+  padding-left: 16px;
+}
+::placeholder {
+  color: #ffffff;
+}
+
+.subscribe {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background: #2e2f42;
+  background-color: transparent;
+  padding-left: 16px;
+  display: flex;
+  justify-content: center;
+  background: #4d5ae5;
+  text-align: center;
+}
+
+.icon-footer {
+  margin-left: 16px;
+  fill: #fff;
+}
+/*======================modal======================**/
+.backdrop {
+  position: fixed;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0.7;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  position: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.modal {
+  width: 408px;
+  min-height: 584px;
+  background: #fcfcfc;
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.2, 0, 0.2, 1);
+}
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #e7e9fc;
+  padding: 0;
+  cursor: pointer;
+  border: 1px solid #2e2f42;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.2, 0, 0.2, 1);
+}
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  background-color: #404bbf;
+  border: none;
+}
+.modal-close-btn:hover > .modal-close-icon,
+.modal-close-btn:focus > .modal-close-icon {
+  fill: #ffffff;
+}
+.modal-close-icon {
+  transition: fill 250ms cubic-bezier(0.2, 0, 0.2, 1);
+}
+.modal-paragraf {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 16px;
+
+  margin-top: 72px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+.form {
+  padding-left: 24px;
+  padding-right: 24px;
+}
+.data-client {
+  margin-bottom: 8px;
+}
+.name-forma {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-bottom: 4px;
+  align-items: center;
+  display: block;
+}
+.icon-input {
+  position: relative;
+}
+.input-forma {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-forma:focus {
+  border: 1px solid #4d5ae5;
+}
+.icon-forma {
+  fill: #2e2f42;
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-forma:focus + .icon-forma {
+  fill: #4d5ae5;
+}
+.client-coment {
+  margin-bottom: 16px;
+}
+.coments {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.coments::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+.coments:focus {
+  border-color: #4d5ae5;
+}
+.user-privacy {
+  margin-bottom: 24px;
+  flex-wrap: wrap;
+}
+
+.privaci-accept {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.privacy-policy {
+  height: 16px;
+  width: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  justify-content: center;
+  fill: transparent;
+  align-items: center;
+  margin-right: 8px;
+}
+.link-privacy-policy {
+  color: #4d5ae5;
+}
+
+.checkbox:checked + .privaci-accept span {
+  color: #4d5ae5;
+  border: none;
+  background-color: #404bbf;
+  fill: #f4f4fd;
+}
+
+.botton-modal-forma {
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: block;
+  margin: 0 auto;
 }
