--- a/css/styles.css
+++ b/css/styles.css
@@ -621,7 +621,7 @@ height: 600px; */
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.02em;
-  color: #fff;
+  color: #ffffff;
   margin-bottom: 16px;
 
   line-height: 1.5;
