--- a/css/styles.css
+++ b/css/styles.css
@@ -666,9 +666,9 @@ height: 600px; */
   width: 264px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  font-weight: 400;
+  font-weight: 500;
   font-size: 12px;
-  line-height: 2;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
   background: #2e2f42;
@@ -678,6 +678,12 @@ height: 600px; */
   justify-content: center;
   background: #4d5ae5;
   text-align: center;
+  min-width: 165px;
+  align-items: center;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+
 }
 
 .icon-footer {
@@ -714,6 +720,11 @@ height: 600px; */
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.2, 0, 0.2, 1);
+  box-shadow: зі значенням 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2); 
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid rgba(0, 0, 0, 0.1); 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
 }
 .modal-close-btn {
   position: absolute;
@@ -797,7 +808,7 @@ height: 600px; */
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .input-forma:focus + .icon-forma {
   fill: #4d5ae5;
