--- a/css/styles.css
+++ b/css/styles.css
@@ -689,6 +689,7 @@ height: 600px; */
 .icon-footer {
   margin-left: 16px;
   fill: #fff;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*======================modal======================**/
 .backdrop {
@@ -703,18 +704,14 @@ height: 600px; */
   visibility: hidden;
   position: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: 1px solid rgba(0, 0, 0, 0.1); 
     padding: 72px 24px 24px 24px;
     box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2); 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-    
+    padding: 72px 24px 24px 24px;
 }
-.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events:auto;
-}
+
 .modal {
   width: 408px;
   min-height: 584px;
@@ -725,12 +722,17 @@ height: 600px; */
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 transition: transform 250ms cubic-bezier(0.2, 0, 0.2, 1);
-  
-  
+padding: 72px 24px 24px 24px; 
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(0, 0, 0, 0.1); 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  
   
+}
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events:auto;
 }
 .modal-close-btn {
   position: absolute;
@@ -762,6 +764,7 @@ transition: transform 250ms cubic-bezier(0.2, 0, 0.2, 1);
 }
 .modal-close-icon {
   transition: fill 250ms cubic-bezier(0.2, 0, 0.2, 1);
+   
   
 }
 .modal-paragraf {
