--- a/css/styles.css
+++ b/css/styles.css
@@ -626,11 +626,13 @@ height: 600px; */
 
   line-height: 1.5;
 
-  text-align: center;
+  text-align: left;
 }
 
 .footer-subs-link {
   margin-left: 80px;
+  width: 453px;
+  height: 80px;
 }
 .email {
   display: flex;
@@ -663,7 +665,7 @@ height: 600px; */
 .subscribe {
   border: 1px solid #fff;
   border-radius: 4px;
-  width: 264px;
+  width: 165px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   font-weight: 500;
@@ -677,13 +679,12 @@ height: 600px; */
   display: flex;
   justify-content: center;
   background: #4d5ae5;
-  text-align: center;
+  text-align: left;
   min-width: 165px;
   align-items: center;
   font-size: 16px;
   cursor: pointer;
   border: none;
-
 }
 
 .icon-footer {
@@ -704,12 +705,13 @@ height: 600px; */
   visibility: hidden;
   position: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    border: 1px solid rgba(0, 0, 0, 0.1); 
-    padding: 72px 24px 24px 24px;
-    box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2); 
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-    padding: 72px 24px 24px 24px;
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 72px 24px 24px 24px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
 }
 
 .modal {
@@ -721,18 +723,21 @@ height: 600px; */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-transition: transform 250ms cubic-bezier(0.2, 0, 0.2, 1);
-padding: 72px 24px 24px 24px; 
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border: 1px solid rgba(0, 0, 0, 0.1); 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
- 
-  
+  transition: transform 250ms cubic-bezier(0.2, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-icon {
+  transition: fill 250ms cubic-bezier(0.2, 0, 0.2, 1);
 }
 .is-open {
   opacity: 1;
   visibility: visible;
-  pointer-events:auto;
+  pointer-events: auto;
 }
 .modal-close-btn {
   position: absolute;
@@ -748,9 +753,10 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0p
   background: #e7e9fc;
   padding: 0;
   cursor: pointer;
- transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   align-items: center;
-  
+
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .modal-close-btn:hover,
@@ -762,11 +768,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0p
 .modal-close-btn:focus > .modal-close-icon {
   fill: #ffffff;
 }
-.modal-close-icon {
-  transition: fill 250ms cubic-bezier(0.2, 0, 0.2, 1);
-   
-  
-}
+
 .modal-paragraf {
   font-weight: 500;
   font-size: 16px;
@@ -819,7 +821,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0p
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .input-forma:focus + .icon-forma {
   fill: #4d5ae5;
@@ -854,7 +856,6 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0p
 }
 .user-privacy {
   margin-bottom: 24px;
-  flex-wrap: wrap;
 }
 
 .privaci-accept {
