add initial files

--- a/css/styles.css
+++ b/css/styles.css
@@ -665,7 +665,7 @@ height: 600px; */
 .subscribe {
   border: 1px solid #fff;
   border-radius: 4px;
-  width: 165px;
+  width: px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   font-weight: 500;
