--- a/css/styles.css
+++ b/css/styles.css
@@ -706,11 +706,9 @@ height: 600px; */
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 72px 24px 24px 24px;
+
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-
-  padding: 72px 24px 24px 24px;
 }
 
 .modal {
@@ -723,7 +721,7 @@ height: 600px; */
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  padding: 72px 24px 24px 24px;
+  padding: 24px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(0, 0, 0, 0.1);
