--- a/css/styles.css
+++ b/css/styles.css
@@ -721,7 +721,7 @@ height: 600px; */
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  padding: 24px;
+  padding: 72px 0 24px 0;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -773,11 +773,11 @@ height: 600px; */
   text-align: center;
   color: #2e2f42;
   margin-bottom: 16px;
-
-  margin-left: 24px;
-  margin-right: 24px;
 }
-
+.form {
+  padding-left: 24px;
+  padding-right: 24px;
+}
 .data-client {
   margin-bottom: 8px;
 }
