--- a/css/styles.css
+++ b/css/styles.css
@@ -543,10 +543,6 @@ height: 600px; */
   display: inline-block;
 }
 
-.container-footer-box {
-  display: flex;
-  align-items: baseline;
-}
 .promo {
   margin-right: 120px;
 }
@@ -616,6 +612,10 @@ height: 600px; */
 .social-icon-hover:focus {
   background-color: #31d0aa;
 }
+.container.footer-container {
+  display: flex;
+  align-items: baseline;
+}
 
 .footer-subs-text {
   font-weight: 500;
@@ -630,7 +630,7 @@ height: 600px; */
 }
 
 .footer-subs-link {
-  margin-left: 80px;
+  margin-left: auto;
   width: 453px;
   height: 80px;
 }
@@ -685,6 +685,13 @@ height: 600px; */
   font-size: 16px;
   cursor: pointer;
   border: none;
+}
+.subscribe:hover {
+  background-color: #404bbf;
+}
+
+.subscribe :focus {
+  background-color: #404bbf;
 }
 
 .icon-footer {
@@ -770,10 +777,7 @@ height: 600px; */
   color: #2e2f42;
   margin-bottom: 16px;
 }
-.form {
-  padding-left: 24px;
-  padding-right: 24px;
-}
+
 .data-client {
   margin-bottom: 8px;
 }
@@ -895,4 +899,11 @@ height: 600px; */
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: block;
   margin: 0 auto;
+}
+.botton-modal-forma:hover {
+  background-color: #404bbf;
+}
+
+.botton-modal-forma:focus {
+  background-color: #404bbf;
 }
